--- a/nginx/symfony.conf
+++ b/nginx/symfony.conf
@@ -2,13 +2,12 @@ server {
     server_name symfony.dev;
     root /var/www/symfony/web;
 
-
     location / {
         try_files $uri @rewriteapp;
     }
 
     location @rewriteapp {
-        rewrite ^(.*)$ /app.php/$1 last;
+        rewrite ^(.*)$ /app_dev.php/$1 last;
     }
 
     location ~ ^/(app|app_dev|config)\.php(/|$) {
