--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -1,33 +1,16 @@
-FROM alpine:3.4
+FROM debian:jessie
 
 MAINTAINER Vincent Composieux <vincent.composieux@gmail.com>
 
-RUN apk add --update \
-    php5-fpm \
-    php5-apcu \
-    php5-curl \
-    php5-gd \
-    php5-iconv \
-    php5-imagick \
-    php5-json \
-    php5-intl \
-    php5-mcrypt \
-    php5-mysql \
-    php5-opcache \
-    php5-openssl \
-    php5-pdo \
-    php5-pdo_mysql \
-    php5-mysqli \
-    php5-xml \
-    php5-zlib
-
-RUN rm -rf /var/cache/apk/* && rm -rf /tmp/*
+RUN apt-get update && apt-get install -y php5-common php5-cli php5-fpm php5-mcrypt php5-mysql php5-apcu php5-gd php5-imagick php5-curl php5-intl
 
 ADD symfony.ini /etc/php5/fpm/conf.d/
 ADD symfony.ini /etc/php5/cli/conf.d/
 
 ADD symfony.pool.conf /etc/php5/fpm/pool.d/
 
-CMD ["php-fpm", "-F"]
+RUN usermod -u 1000 www-data
+
+CMD ["php5-fpm", "-F"]
 
 EXPOSE 9000
