Configured ratchet container and added app directories to repo

--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:3.4
 
-MAINTAINER Vincent Composieux <vincent.composieux@gmail.com>
+MAINTAINER Alex Cox <dev@alexdcox.co.uk>
 
 RUN apk add --update nginx
 RUN rm -rf /var/cache/apk/* && rm -rf /tmp/*
@@ -8,7 +8,7 @@ RUN rm -rf /var/cache/apk/* && rm -rf /tmp/*
 ADD nginx.conf /etc/nginx/
 ADD symfony.conf /etc/nginx/conf.d/
 
-RUN echo "upstream php-upstream { server php:9000; }" > /etc/nginx/conf.d/upstream.conf
+RUN echo "upstream php-upstream { server phpfpm:9000; }" > /etc/nginx/conf.d/upstream.conf
 
 RUN adduser -D -g '' -G www-data www-data
 
