--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,23 +9,31 @@ services:
             MYSQL_DATABASE: symfony
             MYSQL_USER: root
             MYSQL_PASSWORD: root
-    php:
-        build: ./php-fpm
+    phpfpm:
+        build: ./docker/php-fpm
         expose:
             - "9000"
         volumes:
-            - ./symfony:/var/www/symfony
+            - ./app/symfony:/var/www/symfony
             - ./logs/symfony:/var/www/symfony/app/logs
         links:
             - db
+    phpratchet:
+        build: ./docker/php-ratchet
+        expose:
+            - "8080"
+        volumes:
+            - ./app/ratchet:/var/ratchet
+        links:
+            - db
     nginx:
-        build: ./nginx
+        build: ./docker/nginx
         ports:
             - "80:80"
         links:
-            - php
+            - phpfpm
         volumes_from:
-            - php
+            - phpfpm
         volumes:
             - ./logs/nginx/:/var/log/nginx
     elk:
@@ -33,8 +41,8 @@ services:
         ports:
             - "81:80"
         volumes:
-            - ./elk/logstash:/etc/logstash
-            - ./elk/logstash/patterns:/opt/logstash/patterns
+            - ./docker/elk/logstash:/etc/logstash
+            - ./docker/elk/logstash/patterns:/opt/logstash/patterns
         volumes_from:
-            - php
+            - phpfpm
             - nginx
